# prj_strategic_pricing

./: .gitignore  README.md  pyproject.toml
src/prj_strategic_pricing/: __init__.py  calculator.py  cli.py  workbook.py
src/strategic_pricing_calculator/: __init__.py  cli.py  workbook.py
tests/: test_calculator.py
