[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prj-strategic-pricing"
version = "0.1.0"
description = "Excel-based strategic project pricing calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1"]

[project.scripts]
prj-strategic-pricing-calc = "prj_strategic_pricing.cli:calculate_command"
prj-strategic-pricing-template = "prj_strategic_pricing.cli:template_command"

[tool.setuptools.packages.find]
where = ["src"]
